tests/errors/const_shadow.vt
const MAX: int = 10; fn main(){ let MAX = 5; }
